Fix a bunch of dumb stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Rig the Referee.sln"
+    "dotnet.defaultSolution": "Rigged-Referee.sln"
 }
